// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

01/21/2010
	r132 [pakpil]
	* Added some missing lines.
	* Added WM_SEVERE_RAINSTORM skill working as intended.
	* Added the new clif_delitem packet. Take care with your PACKETVER
	* Merged the new clif_damage packet from stable.
	* Re-fixed SC_BLOODYLUST that does not affect the caster.
	* Minor fix in SC_INVISIVILITY.

01/21/2010
	r131 [Rytech]
	*Full checkup and updates to trunk branch
	-Corrected job MAP ID's in the const.txt
	-Updated the item_db2, mob_db2, job_db2, skill_require_db, skill_tree with all data from the stable branch
	-Updated the skill_cast_db, skill_db by adding missing lines and cleaning up
	-Readded Gangsi, Death Knight, and Dark Collector job mask support for items
	-Add a skill tag to skill.h

01/21/2010
	r130 [pakpil]
	* Fixed some mistake in SC_SHADOWFORM.
	* Minor typo fixed.
	* Minor fix in pc_setriding and pc_isriding.

01/21/2010
	r128 [pakpil]
	* Fixed SC_AUTOSHADOWSPELL. bug report 54.

01/17/2010
	r117 [Jobbie]
	* Fixed Groomy, Weakness, Unlucky status regarding its calculation.
	* Fixed Weakness should not strip weapon if the player is under chemical protection.
	* An initialization of "0" to sc_def to avoid warning message in some case.

	r116 [Jobbie]
	* Fixed an issue which other client from 20091118 doesn't show cast bar.
	* Fixed the define client version in mmo.h which causes client crash when someone pm'ed you.
	* Fixed a typo on rev108 commit which causes compile errors.

01/15/2010
	r107 [LimitLine]
	* Added chance to change enemy's element to Poison with Cloud Kill.
	* Fixed Cloud Kill not dealing damage.
	* Changed Vacuum Extreme's unit ID to the correct one.
	* Changed Warmer's unit ID to the correct one.
	* Other minor changes.

	r106 [LimitLine]